--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
-    overflow: hidden;
+    background-color: #242324;
+    background-image: url(../images/Rectangle.svg);
 }
 
 h1, h2, h3, h4 {
@@ -41,7 +41,8 @@ p, a {
 /******* Navigation *******/
 
 header nav {
-    background-color: black;
+    background-image: url(../images/Rectangle.svg);
+    background-color: #242324;
     height: 75px;
     display: flex;
     align-items: center;
@@ -170,19 +171,21 @@ header nav #logo {
     font-weight: bold;
     font-size: 16px;
     text-transform: uppercase;
-    background: linear-gradient(black, black) padding-box,
-    linear-gradient(90deg, rgba(234,220,33,1) 0%, rgba(255,178,53,1) 25%, rgba(215,18,133,1) 50%, rgba(68,206,250,1) 75%, rgba(99,226,207,1) 100%) border-box;
-    border-radius: 50em;
-    border: 3px solid transparent;
+    border: 1px solid white;
+    border-radius: 30px;
     padding: 10px 20px 10px 20px;
-    background-color: black;
     cursor: pointer;
     margin-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 100px;
 }
  
 .registerAndLogin {
     margin: 200px auto auto auto;
-    padding: 30px;
+    padding: 50px;
     grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -192,10 +195,16 @@ header nav #logo {
 
 .registerAndLogin form label,
 .registerAndLogin form input {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 20px;
+color: white;
+font-family: 'Alpino-Regular';
+}
+
+#password, #username {
+    background-color: transparent;
 }
 
 .anotherTitle {
@@ -207,7 +216,6 @@ header nav #logo {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
-    grid-column-gap: 50px;
     grid-row-gap: 0px;
     
 }
@@ -218,10 +226,51 @@ header nav #logo {
     max-height: 100%;
 }
 
+#picture {
+    height: 35%;
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 40
+}
+
+.blob {
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+    width: 791px;
+    height: 775px;
+}
+
+#yellow {
+    top: 10%;
+    right: 55%;
+}
+
+#orange {
+    top: 15%;
+    right: 40%;
+}
+
+#pink {
+    top: 10%;
+    right: 25%;
+}
+
+#blue {
+    top: 20%;
+    right: 10%;
+}
+
+#cyan {
+    top: 10%;
+    right: 0%;
+}
+
+#login {
+    overflow: hidden;
 }
