--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ header nav #logo {
 }
  
 .registerAndLogin {
-    margin: 200px auto auto auto;
+    margin: 150px auto auto auto;
     padding: 50px;
     grid-area: 1 / 1 / 2 / 2;
 }
@@ -231,11 +231,18 @@ font-family: 'Alpino-Regular';
 }
 
 .material-symbols-outlined {
+    color: white;
+    margin-right: 10px;
   font-variation-settings:
-  'FILL' 0,
+  'FILL' 1,
   'wght' 400,
   'GRAD' 0,
   'opsz' 40
+}
+
+#goback {
+    position: absolute;
+    margin-top: 3px;
 }
 
 .blob {
@@ -271,6 +278,43 @@ font-family: 'Alpino-Regular';
     right: 0%;
 }
 
+#yellow2 {
+    top: 51%;
+    right: 76%;
+}
+
+#orange2 {
+    top: 10%;
+    right: 60%;
+}
+
+#pink2 {
+    top: -10%;
+    right: 35%;
+}
+
+#blue2 {
+    top: 20%;
+    right: 10%;
+}
+
+#cyan2 {
+    top: -20%;
+    right: -10%;
+}
+
 #login {
     overflow: hidden;
+}
+
+.loginbuttons {
+    height: 40px;
+}
+
+#loginbuttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
 }
