--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ header nav #logo {
     margin: 50px 200px 0px 200px;
 }
 
-#password, #username  {
+#password, #username, #firstname, #lastname, #email, #emailverif {
     font-family: 'Alpino-Regular';
     font-size: 16px;
     background-color: black;
@@ -156,6 +156,7 @@ header nav #logo {
     border-radius: 50px;
     color: white;
     padding: 10px 10px 10px 20px;
+    background-color: transparent;
 }
 
 ::placeholder  {
@@ -320,19 +321,31 @@ font-family: 'Alpino-Regular';
 }
 
 #register {
-    margin-top: 0px;
+    margin-top: 25px;
 }
 
 .firstlastname {
+    margin-top: 25px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 20px;
-    display: block;
-color: white;
-font-family: 'Alpino-Regular';
-
+    flex-direction: row;
+    justify-content: center;
+    color: white;
+    font-family: 'Alpino-Regular';
 }
+
+#firstlastname {
+    display: flex;
+    gap: 40px;
+}
+
+#firstname {
+    width: 150px;
+}
+
+#lastname {
+    width: 150px;
+}
+
 
 .profile-picture {
     width: 150px;
@@ -352,6 +365,7 @@ font-family: 'Alpino-Regular';
     width: 100%;
     height: 200px;
     object-fit: cover;
+    margin-top: 10px;
     
 }
 
@@ -387,4 +401,19 @@ font-family: 'Alpino-Regular';
 
 .bio {
     margin: 0px 150px 10px 0px;
+}
+
+.small-btn {
+    text-decoration: none;
+    color: white;
+    background: transparent;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid white;
+    border-radius: 20px;
+    width: max-content;
+    text-transform: uppercase;
+    font-weight: bold;
+    position: absolute;
+    right: 22%;
+    margin-top: 20px;
 }
