--- a/css/styles.css
+++ b/css/styles.css
@@ -149,12 +149,16 @@ header nav #logo {
 .subTitle {
     text-align: center;
     font-size: 48px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .subText {
     text-align: center;
     font-size: 24px;
+    margin: 50px 200px 0px 200px;
+}
+
+.subsubText {
     margin: 50px 200px 0px 200px;
 }
 
@@ -451,10 +455,12 @@ font-family: 'Alpino-Regular';
 
 .bio {
     margin: 0px 150px 10px 0px;
+    font-size: 18px;
 }
 
 .genres {
     font-style: italic;
+    font-size: 16px;
 }
 
 .small-btn {
