--- a/css/styles.css
+++ b/css/styles.css
@@ -558,6 +558,13 @@ font-family: 'Alpino-Regular';
     color: transparent;
   }
 
+  #endendend {
+    position: absolute;
+    margin-top: 900px;
+    color: transparent;
+  }
+
+
  #calendar {
     margin-top: 100px;
     width: 90%;
@@ -690,6 +697,18 @@ font-family: 'Alpino-Regular';
 
 .infoConcert a {
     margin-left: 10px;
+}
+
+.mostviewed {
+    position: absolute;
+    left: 20%;
+    margin-top: 400px;
+}
+
+.vid {
+    position: absolute;
+    left: 20%;
+    margin-top: 450px;
 }
 
 
